--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,7 +2,7 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "type": "pwa-node",
+      "type": "node",
       "name": "Launch via npm",
       "request": "launch",
       "runtimeArgs": ["run", "start:dev"],
